tests/ui/generic-const-items/reference-outlives-referent.stderr
error[E0491]: in type `&'a &'b ()`, reference has a longer lifetime than the data it references
  --> $DIR/reference-outlives-referent.rs:10:5
   |
LL |     const K<'b>: &'a &'b () = &&();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime `'a` as defined here
  --> $DIR/reference-outlives-referent.rs:9:6
   |
LL | impl<'a> S<'a> {
   |      ^^
note: but the referenced data is only valid for the lifetime `'b` as defined here
  --> $DIR/reference-outlives-referent.rs:10:13
   |
LL |     const K<'b>: &'a &'b () = &&();
   |             ^^

error: lifetime may not live long enough
  --> $DIR/reference-outlives-referent.rs:14:12
   |
LL | const Q<'a, 'b>: () = {
   |         --  -- lifetime `'b` defined here
   |         |
   |         lifetime `'a` defined here
LL |     let _: &'a &'b () = &&();
   |            ^^^^^^^^^^ requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0491`.
